# pcdet_ros2

./: .gitignore  README.md  create_container.bash  create_container.sh  dockerfile  setup.bash  setup.sh
docker/Jetson/: Dockerfile
docker/x86_64/: Dockerfile
extra/: setup.py
src/pcd_publisher/: CMakeLists.txt  package.xml
src/pcd_publisher/src/: 3Ddetections_to_markers.cpp  pcd_publisher_node.cpp  pcd_republisher_node.cpp
src/pcdet_ros2/config/: parta2_free.param.yaml
src/pcdet_ros2/launch/: pcdet.launch.py  sdv_pcdet.launch.py
src/pcdet_ros2/pcdet_ros2/: pcdet_node.py
