<?xml version="1.0"?>
<package format="3">
  <name>pcd_publisher</name>
  <version>0.0.1</version>
  <description>Publishes a PCD file as PointCloud2</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>vision_msgs</depend>
  <depend>visualization_msgs</depend>

  <depend>rosbag2_cpp</depend>
  <depend>rosbag2_storage</depend>

  <exec_depend>pcl-tools</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
